--- a/railway.toml
+++ b/railway.toml
@@ -3,10 +3,10 @@ builder = "RAILPACK"
 buildCommand = "go build -ldflags \"-s -w\" -o bin/openport-server ./cmd/server"
 
 [deploy]
-startCommand = "./bin/openport-server -addr :$PORT -tunnel-addr :9090 -domain $DOMAIN"
+startCommand = "./bin/openport-server -addr :$PORT -tunnel-addr :9090"
 numReplicas = 1
 runtime = "V2"
-healthcheckPath = "/"
+healthcheckPath = "/health"
 healthcheckTimeout = 60
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
