--- a/railway.toml
+++ b/railway.toml
@@ -3,11 +3,11 @@ builder = "RAILPACK"
 buildCommand = "go build -ldflags \"-s -w\" -o bin/openport-server ./cmd/server"
 
 [deploy]
-startCommand = "./bin/openport-server -addr :$PORT -tunnel-addr :9090"
+startCommand = "./bin/openport-server"
 numReplicas = 1
 runtime = "V2"
 healthcheckPath = "/health"
-healthcheckTimeout = 60
+healthcheckTimeout = 120
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
