--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,9 @@
 [build]
-builder = "RAILPACK"
-buildCommand = "go build -ldflags \"-s -w\" -o bin/openport-server ./cmd/server"
+builder = "DOCKERFILE"
+dockerfilePath = "./Dockerfile"
 
 [deploy]
-startCommand = "./bin/openport-server"
 numReplicas = 1
-runtime = "V2"
 healthcheckPath = "/health"
 healthcheckTimeout = 120
 restartPolicyType = "ON_FAILURE"
